--- a/dapp/index.html
+++ b/dapp/index.html
@@ -9,10 +9,35 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
 
-    <!-- Title -->
-    <title>
-      NFTY Finance - Decentralized, comprehensive liquidity solutions for NFTs
-    </title>
+    <!-- Meta Tags -->
+    <!-- Primary Meta Tags -->
+    <title>NFTY Finance - TestNet</title>
+    <meta name="title" content="NFTY Finance - TestNet">
+    <meta name="description" content="NFTY Finance is a decentralized protocol for NFT lending. NFTY Finance enables you to borrow against your NFTs without having to sell them. As a lender, you can lend against NFTs with minimal risk of impermanent loss because, if the borrower defaults, you will receive the NFT at a discount.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://testnet.nfty.finance/">
+    <meta property="og:title" content="NFTY Finance - TestNet">
+    <meta property="og:description" content="NFTY Finance is a decentralized protocol for NFT lending. NFTY Finance enables you to borrow against your NFTs without having to sell them. As a lender, you can lend against NFTs with minimal risk of impermanent loss because, if the borrower defaults, you will receive the NFT at a discount.">
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="http://testnet.nfty.finance/">
+    <meta property="twitter:title" content="NFTY Finance - TestNet">
+    <meta property="twitter:description" content="NFTY Finance is a decentralized protocol for NFT lending. NFTY Finance enables you to borrow against your NFTs without having to sell them. As a lender, you can lend against NFTs with minimal risk of impermanent loss because, if the borrower defaults, you will receive the NFT at a discount.">
+    <meta property="twitter:image" content="">
+
+    <!-- Google tag (gtag.js) (testnet.nfty.finance) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJQS54HL3V"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZJQS54HL3V');
+    </script>
 
     <!-- Halfmoon CSS -->
     <link href="/css/halfmoon.min.css" rel="stylesheet" />
