--- a/dapp-v1/index.html
+++ b/dapp-v1/index.html
@@ -40,13 +40,13 @@
     </script>
 
     <!-- Halfmoon CSS -->
-    <link href="/halfmoon.css" rel="stylesheet" />
+    <link href="/theme/halfmoon.css" rel="stylesheet" />
 
     <!-- SocialPass CSS theme -->
-    <link href="/nftyfinance-theme.css" rel="stylesheet" />
+    <link href="/theme/nftyfinance-theme.css" rel="stylesheet" />
 
     <!-- Halfmoon JS -->
-    <script type="text/javascript" src="/bootstrap.bundle.js"></script>
+    <script type="text/javascript" src="/theme/bootstrap.bundle.js"></script>
 
     <!-- Font Awesome 6 -->
     <script
