--- a/dapp-v1/index.html
+++ b/dapp-v1/index.html
@@ -63,6 +63,7 @@
         width: 320px;
         max-width: 100%;
         border-right: 0;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
       }
 
       @media (min-width: 1200px) {
