latest halfmoon UI

--- a/dapp-v1/index.html
+++ b/dapp-v1/index.html
@@ -4,10 +4,7 @@
     <!-- Meta tags -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
     <!-- Meta Tags -->
     <!-- Primary Meta Tags -->
@@ -39,76 +36,17 @@
       gtag('config', 'G-ZJQS54HL3V');
     </script>
 
-    <!-- Halfmoon CSS -->
+    <!-- THEME -->
     <link href="/theme/halfmoon.css" rel="stylesheet" />
-
-    <!-- SocialPass CSS theme -->
-    <link href="/theme/nftyfinance-theme.css" rel="stylesheet" />
-
-    <!-- Halfmoon JS -->
+    <link href="/theme/nftyfi-theme.css" rel="stylesheet" />
     <script type="text/javascript" src="/theme/bootstrap.bundle.js"></script>
-
-    <!-- Font Awesome 6 -->
     <script
       src="https://kit.fontawesome.com/e222fd7f73.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+    </script>
 
     <!-- Polyfill -->
     <script type="module" src="./polyfills.ts"></script>
-
-    <!-- Custom styles -->
-    <style type="text/css">
-      #sidebar {
-        width: 320px;
-        max-width: 100%;
-        border-right: 0;
-        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-      }
-
-      @media (min-width: 1200px) {
-        body {
-          padding-left: 320px;
-        }
-
-        #sidebar {
-          position: fixed;
-          top: 0;
-          left: 0;
-          height: 100%;
-          background-color: var(--bs-content-bg) !important;
-          overflow-y: auto;
-        }
-      }
-
-      .content-container {
-        min-height: calc(100vh - 112px);
-      }
-
-      @media (min-width: 768px) {
-        .content-container {
-          min-height: calc(100vh - 85px);
-        }
-      }
-
-      .cover-img-input {
-        width: 116px;
-        padding: var(--bs-spacer-1);
-        margin: var(--bs-spacer-1);
-        border-radius: var(--bs-border-radius);
-        overflow: hidden;
-      }
-
-      .cover-img-input .form-label,
-      .cover-img-input .form-text,
-      .cover-img-input .input-group {
-        display: none;
-      }
-
-      .cover-img-input * {
-        border-color: transparent !important;
-      }
-    </style>
 
   </head>
   <body>
