Explore collections - selected

--- a/new-markup/explore_collections_selected.html
+++ b/new-markup/explore_collections_selected.html
@@ -143,9 +143,12 @@
 		<!-- Header start -->
 		<header class="border-bottom py-3">
 			<div class="container-md px-3 px-sm-4 px-lg-5 py-1 d-md-flex align-items-center">
-				<h3 class="fw-600 m-0 text-center text-md-start">
-					Explore Collections
-				</h3>
+				<div class="d-flex align-items-center justify-content-center justify-content-md-start">
+					<img src="images/image-5.png" alt="Image" class="d-block flex-shrink-0 me-3 rounded-circle" width="40">
+					<h3 class="fw-600 m-0 text-center text-md-start h4">
+						Pudgy Penguins Lending Desks
+					</h3>
+				</div>
 				<div class="ps-md-3 ms-auto mt-3 mt-md-0 d-flex align-items-center flex-nowrap justify-content-center">
 					<button type="button" class="btn btn-secondary btn-square rounded-circle flex-shrink-0 me-2 d-md-none" aria-label="Toggle sidebar" data-bs-toggle="offcanvas" data-bs-target="#sidebar">
 						<i class="fa-solid fa-bars"></i>
@@ -164,182 +167,159 @@
 		<!-- Main content start -->
 		<main class="mt-4 mt-xl-5">
 			<div class="container-md px-3 px-sm-4 px-lg-5">
-				<div class="card border-0 shadow rounded-4">
-					<div class="card-body p-4">
-						<div class="row g-4 g-xl-5 justify-content-center">
-							<div class="col-sm-6 col-xl-4">
-								<div class="d-flex align-items-center">
-									<div class="specific-w-50 specific-h-50 d-flex align-items-center justify-content-center bg-primary-subtle text-primary-emphasis rounded-circle flex-shrink-0">
-										<i class="fa-solid fa-hexagon-vertical-nft h4 m-0"></i>
-									</div>
-									<div class="ps-3">
-										<h3 class="m-0">30</h3>
-										<p class="m-0 text-primary-emphasis">number of collections</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-sm-6 col-xl-4">
-								<div class="d-flex align-items-center">
-									<div class="specific-w-50 specific-h-50 d-flex align-items-center justify-content-center bg-primary-subtle text-primary-emphasis rounded-circle flex-shrink-0">
-										<i class="fa-solid fa-square-dollar h4 m-0"></i>
-									</div>
-									<div class="ps-3">
-										<h3 class="m-0">20K <small class="fw-normal">USD</small></h3>
-										<p class="m-0 text-primary-emphasis">total value locked (TVL)</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-sm-6 col-xl-4">
-								<div class="d-flex align-items-center">
-									<div class="specific-w-50 specific-h-50 d-flex align-items-center justify-content-center bg-primary-subtle text-primary-emphasis rounded-circle flex-shrink-0">
-										<i class="fa-solid fa-sack-dollar h4 m-0"></i>
-									</div>
-									<div class="ps-3">
-										<h3 class="m-0">20K <small class="fw-normal">USD</small></h3>
-										<p class="m-0 text-primary-emphasis">total available liquidity (TAL)</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+				<div class="text-body-secondary position-relative mt-n3">
+					<a href="#" class="text-reset text-decoration-none">
+						<i class="fa-light fa-angle-left me-1"></i>
+						Explore Collections
+					</a>
 				</div>
-				<div class="card border-0 shadow rounded-4 my-4 my-xl-5 overflow-hidden">
+				<div class="card border-0 shadow rounded-4 my-4 mb-xl-5  overflow-hidden">
 					<div class="table-responsive">
 						<table class="table m-0 text-nowrap">
 							<thead>
 								<tr>
-									<th class="py-3 bg-primary-subtle text-primary-emphasis ps-3" colspan="2">Collection</th>
+									<th class="py-3 bg-primary-subtle text-primary-emphasis ps-3" colspan="2">Lender</th>
 									<th class="py-3 bg-primary-subtle text-primary-emphasis">Currency</th>
-									<th class="py-3 bg-primary-subtle text-primary-emphasis">Desks</th>
-									<th class="py-3 bg-primary-subtle text-primary-emphasis pe-3">TAL (USD)</th>
-									<th class="py-3 bg-primary-subtle text-primary-emphasis pe-3">Utilization</th>
+									<th class="py-3 bg-primary-subtle text-primary-emphasis">Offer</th>
+									<th class="py-3 bg-primary-subtle text-primary-emphasis pe-3">Duration</th>
+									<th class="py-3 bg-primary-subtle text-primary-emphasis pe-3">Interest Rate</th>
 									<th class="py-3 bg-primary-subtle text-primary-emphasis pe-3"> </th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr class="align-middle">
 									<td class="py-3 ps-3">
-										<img src="images/image-5.png" width="30" class="d-block rounded-circle" alt="Image">
+										<img src="images/image-12.png" width="30" class="d-block rounded-circle" alt="Image">
 									</td>
-									<td class="py-3">Pudgy Penguins</td>
+									<td class="py-3">0x34n3...4j32op2j</td>
 									<td class="py-3 align-middle">
-										<div class="d-flex align-items-center">
-											<div class="position-relative" style="width: 60px; height: 30px;">
-												<img src="images/image-8.svg" height="30" class="d-block rounded-circle position-absolute top-0 start-0 z-3" alt="Image">
-												<img src="images/image-10.png" height="30" class="d-block rounded-circle position-absolute top-0 start-0 z-2" alt="Image" style="margin-left: 15px;">
-												<img src="images/image-13.png" height="30" class="d-block rounded-circle position-absolute top-0 start-0 z-1" alt="Image" style="margin-left: 30px;">
-											</div>
-											<span class="ms-1">...</span>
-										</div>
+										<img src="images/image-8.svg" height="30" class="d-block rounded-circle" alt="Image">
 									</td>
-									<td class="py-3">3</td>
-									<td class="py-3">$60,000</td>
-									<td class="py-3">67%</td>
+									<td class="py-3">2,000 - 9,000</td>
+									<td class="py-3">10-30 days</td>
+									<td class="py-3">3-9%</td>
 									<td class="py-3 pe-3">
-										<button class="btn btn-primary rounded-pill px-4">Find a Loan</button>
+										<button class="btn btn-primary rounded-pill px-4">Get a Loan</button>
 									</td>
 								</tr>
 								<tr class="align-middle">
 									<td class="py-3 ps-3">
-										<img src="images/image-4.png" width="30" class="d-block rounded-circle" alt="Image">
+										<img src="images/image-12.png" width="30" class="d-block rounded-circle" alt="Image">
 									</td>
-									<td class="py-3">Doodles</td>
+									<td class="py-3">0x34n3...4j32op2j</td>
 									<td class="py-3 align-middle">
-										<div class="d-flex align-items-center">
-											<div class="position-relative" style="width: 40px; height: 30px;">
-												<img src="images/image-8.svg" height="30" class="d-block rounded-circle position-absolute top-0 start-0 z-3" alt="Image">
-												<img src="images/image-10.png" height="30" class="d-block rounded-circle position-absolute top-0 start-0 z-2" alt="Image" style="margin-left: 15px;">
-											</div>
-										</div>
+										<img src="images/image-10.png" height="30" class="d-block rounded-circle" alt="Image">
 									</td>
-									<td class="py-3">3</td>
-									<td class="py-3">$60,000</td>
-									<td class="py-3">67%</td>
+									<td class="py-3">2,000 - 9,000</td>
+									<td class="py-3">10-30 days</td>
+									<td class="py-3">3-9%</td>
 									<td class="py-3 pe-3">
-										<button class="btn btn-primary rounded-pill px-4">Find a Loan</button>
+										<button class="btn btn-primary rounded-pill px-4">Get a Loan</button>
 									</td>
 								</tr>
 								<tr class="align-middle">
 									<td class="py-3 ps-3">
-										<img src="images/image-6.png" width="30" class="d-block rounded-circle" alt="Image">
+										<img src="images/image-12.png" width="30" class="d-block rounded-circle" alt="Image">
 									</td>
-									<td class="py-3">goblintown.wtf</td>
+									<td class="py-3">0x34n3...4j32op2j</td>
 									<td class="py-3 align-middle">
-										<div class="d-flex align-items-center">
-											<div class="position-relative" style="width: 30px; height: 30px;">
-												<img src="images/image-13.png" height="30" class="d-block rounded-circle position-absolute top-0 start-0 z-3" alt="Image">
-											</div>
-										</div>
+										<img src="images/image-13.png" height="30" class="d-block rounded-circle" alt="Image">
 									</td>
-									<td class="py-3">3</td>
-									<td class="py-3">$60,000</td>
-									<td class="py-3">67%</td>
+									<td class="py-3">2,000 - 9,000</td>
+									<td class="py-3">10-30 days</td>
+									<td class="py-3">3-9%</td>
 									<td class="py-3 pe-3">
-										<button class="btn btn-primary rounded-pill px-4">Find a Loan</button>
+										<button class="btn btn-primary rounded-pill px-4">Get a Loan</button>
 									</td>
 								</tr>
 								<tr class="align-middle">
 									<td class="py-3 ps-3">
-										<img src="images/image-7.png" width="30" class="d-block rounded-circle" alt="Image">
+										<img src="images/image-12.png" width="30" class="d-block rounded-circle" alt="Image">
 									</td>
-									<td class="py-3">Mutant Ape Yacht Club</td>
+									<td class="py-3">0x34n3...4j32op2j</td>
 									<td class="py-3 align-middle">
-										<div class="d-flex align-items-center">
-											<div class="position-relative" style="width: 60px; height: 30px;">
-												<img src="images/image-10.png" height="30" class="d-block rounded-circle position-absolute top-0 start-0 z-3" alt="Image">
-												<img src="images/image-8.svg" height="30" class="d-block rounded-circle position-absolute top-0 start-0 z-2" alt="Image" style="margin-left: 15px;">
-												<img src="images/image-13.png" height="30" class="d-block rounded-circle position-absolute top-0 start-0 z-1" alt="Image" style="margin-left: 30px;">
-											</div>
-											<span class="ms-1">...</span>
-										</div>
+										<img src="images/image-8.svg" height="30" class="d-block rounded-circle" alt="Image">
 									</td>
-									<td class="py-3">3</td>
-									<td class="py-3">$60,000</td>
-									<td class="py-3">67%</td>
+									<td class="py-3">2,000 - 9,000</td>
+									<td class="py-3">10-30 days</td>
+									<td class="py-3">3-9%</td>
 									<td class="py-3 pe-3">
-										<button class="btn btn-primary rounded-pill px-4">Find a Loan</button>
+										<button class="btn btn-primary rounded-pill px-4">Get a Loan</button>
 									</td>
 								</tr>
 								<tr class="align-middle">
 									<td class="py-3 ps-3">
-										<img src="images/image-5.png" width="30" class="d-block rounded-circle" alt="Image">
+										<img src="images/image-12.png" width="30" class="d-block rounded-circle" alt="Image">
 									</td>
-									<td class="py-3">Pudgy Penguins</td>
+									<td class="py-3">0x34n3...4j32op2j</td>
 									<td class="py-3 align-middle">
-										<div class="d-flex align-items-center">
-											<div class="position-relative" style="width: 60px; height: 30px;">
-												<img src="images/image-8.svg" height="30" class="d-block rounded-circle position-absolute top-0 start-0 z-3" alt="Image">
-												<img src="images/image-10.png" height="30" class="d-block rounded-circle position-absolute top-0 start-0 z-2" alt="Image" style="margin-left: 15px;">
-												<img src="images/image-13.png" height="30" class="d-block rounded-circle position-absolute top-0 start-0 z-1" alt="Image" style="margin-left: 30px;">
-											</div>
-											<span class="ms-1">...</span>
-										</div>
+										<img src="images/image-10.png" height="30" class="d-block rounded-circle" alt="Image">
 									</td>
-									<td class="py-3">3</td>
-									<td class="py-3">$60,000</td>
-									<td class="py-3">67%</td>
+									<td class="py-3">2,000 - 9,000</td>
+									<td class="py-3">10-30 days</td>
+									<td class="py-3">3-9%</td>
 									<td class="py-3 pe-3">
-										<button class="btn btn-primary rounded-pill px-4">Find a Loan</button>
+										<button class="btn btn-primary rounded-pill px-4">Get a Loan</button>
 									</td>
 								</tr>
 								<tr class="align-middle">
 									<td class="py-3 ps-3">
-										<img src="images/image-4.png" width="30" class="d-block rounded-circle" alt="Image">
+										<img src="images/image-12.png" width="30" class="d-block rounded-circle" alt="Image">
 									</td>
-									<td class="py-3">Doodles</td>
+									<td class="py-3">0x34n3...4j32op2j</td>
 									<td class="py-3 align-middle">
-										<div class="d-flex align-items-center">
-											<div class="position-relative" style="width: 40px; height: 30px;">
-												<img src="images/image-8.svg" height="30" class="d-block rounded-circle position-absolute top-0 start-0 z-3" alt="Image">
-												<img src="images/image-10.png" height="30" class="d-block rounded-circle position-absolute top-0 start-0 z-2" alt="Image" style="margin-left: 15px;">
-											</div>
-										</div>
+										<img src="images/image-13.png" height="30" class="d-block rounded-circle" alt="Image">
 									</td>
-									<td class="py-3">3</td>
-									<td class="py-3">$60,000</td>
-									<td class="py-3">67%</td>
+									<td class="py-3">2,000 - 9,000</td>
+									<td class="py-3">10-30 days</td>
+									<td class="py-3">3-9%</td>
 									<td class="py-3 pe-3">
-										<button class="btn btn-primary rounded-pill px-4">Find a Loan</button>
+										<button class="btn btn-primary rounded-pill px-4">Get a Loan</button>
+									</td>
+								</tr>
+								<tr class="align-middle">
+									<td class="py-3 ps-3">
+										<img src="images/image-12.png" width="30" class="d-block rounded-circle" alt="Image">
+									</td>
+									<td class="py-3">0x34n3...4j32op2j</td>
+									<td class="py-3 align-middle">
+										<img src="images/image-8.svg" height="30" class="d-block rounded-circle" alt="Image">
+									</td>
+									<td class="py-3">2,000 - 9,000</td>
+									<td class="py-3">10-30 days</td>
+									<td class="py-3">3-9%</td>
+									<td class="py-3 pe-3">
+										<button class="btn btn-primary rounded-pill px-4">Get a Loan</button>
+									</td>
+								</tr>
+								<tr class="align-middle">
+									<td class="py-3 ps-3">
+										<img src="images/image-12.png" width="30" class="d-block rounded-circle" alt="Image">
+									</td>
+									<td class="py-3">0x34n3...4j32op2j</td>
+									<td class="py-3 align-middle">
+										<img src="images/image-10.png" height="30" class="d-block rounded-circle" alt="Image">
+									</td>
+									<td class="py-3">2,000 - 9,000</td>
+									<td class="py-3">10-30 days</td>
+									<td class="py-3">3-9%</td>
+									<td class="py-3 pe-3">
+										<button class="btn btn-primary rounded-pill px-4">Get a Loan</button>
+									</td>
+								</tr>
+								<tr class="align-middle">
+									<td class="py-3 ps-3">
+										<img src="images/image-12.png" width="30" class="d-block rounded-circle" alt="Image">
+									</td>
+									<td class="py-3">0x34n3...4j32op2j</td>
+									<td class="py-3 align-middle">
+										<img src="images/image-13.png" height="30" class="d-block rounded-circle" alt="Image">
+									</td>
+									<td class="py-3">2,000 - 9,000</td>
+									<td class="py-3">10-30 days</td>
+									<td class="py-3">3-9%</td>
+									<td class="py-3 pe-3">
+										<button class="btn btn-primary rounded-pill px-4">Get a Loan</button>
 									</td>
 								</tr>
 							</tbody>
