--- a/dapp-v1/index.html
+++ b/dapp-v1/index.html
@@ -39,10 +39,24 @@
     <!-- THEME -->
     <link href="/theme/halfmoon.css" rel="stylesheet" />
     <link href="/theme/nftyfi-theme.css" rel="stylesheet" />
-    <script
-      src="https://kit.fontawesome.com/e222fd7f73.js"
-      crossorigin="anonymous">
-    </script>
+    <script src="https://kit.fontawesome.com/e222fd7f73.js" crossorigin="anonymous"></script>
+    <style type="text/css">
+      .btn-square {
+        padding-left: 0;
+        padding-right: 0;
+        width: 30px;
+        height: 30px;
+      }
+
+      .table tbody tr:last-child > td,
+      .table tbody tr:last-child > th {
+        border-bottom: 0;
+      }
+
+      .fw-600 {
+        font-weight: 600 !important;
+      }
+    </style>
 
     <!-- Polyfill -->
     <script type="module" src="./polyfills.ts"></script>
