--- a/dapp-v1/index.html
+++ b/dapp-v1/index.html
@@ -56,6 +56,34 @@
       .fw-600 {
         font-weight: 600 !important;
       }
+
+      /* NFTY Checkbox / Radio */
+
+      .nfty-check:not(:last-child) {
+        margin-bottom: var(--bs-spacer-2);
+      }
+
+      .nfty-check .btn-check + .btn {
+        border: 0;
+        outline: 0;
+      }
+
+      .nfty-check .btn-check:focus-visible + .btn {
+        box-shadow: 0 0 0 var(--bs-focus-ring-width) hsla(var(--bs-primary-hsl), 0.5);
+      }
+
+      .nfty-check .btn-check:checked + .btn {
+        background-color: var(--bs-primary-bg-subtle);
+        border-color: var(--bs-primary-border-subtle) !important;
+      }
+
+      .nfty-check .btn-check + .btn .btn-check-text {
+        text-align: left;
+      }
+
+      .nfty-check .btn-check:checked + .btn .btn-check-text {
+        color: var(--bs-primary-text-emphasis);
+      }
     </style>
 
     <!-- Polyfill -->
