--- a/dapp-v1/index.html
+++ b/dapp-v1/index.html
@@ -9,6 +9,7 @@
     <!-- Meta Tags -->
     <!-- Primary Meta Tags -->
     <title>NFTY Finance - TestNet</title>
+    <link rel="icon" href="/theme/icon.svg">
     <meta name="title" content="NFTY Finance - TestNet">
     <meta name="description" content="NFTY Finance is a decentralized protocol for NFT lending. NFTY Finance enables you to borrow against your NFTs without having to sell them. As a lender, you can lend against NFTs with minimal risk of impermanent loss because, if the borrower defaults, you will receive the NFT at a discount.">
 
