--- a/faucet/index.html
+++ b/faucet/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NFTY Testnet Faucet</title>
+    <title>Magnify Testnet Faucet</title>
     <script type="module" src="./polyfills.ts"></script>
   </head>
   <body>
