update meta tags

--- a/dapp-v1/index.html
+++ b/dapp-v1/index.html
@@ -8,26 +8,26 @@
 
     <!-- Meta Tags -->
     <!-- Primary Meta Tags -->
-    <title>NFTY Finance - TestNet</title>
+    <title>Magnify.Cash</title>
     <link rel="icon" href="/theme/icon.svg">
-    <meta name="title" content="NFTY Finance - TestNet">
-    <meta name="description" content="NFTY Finance is a decentralized protocol for NFT lending. NFTY Finance enables you to borrow against your NFTs without having to sell them. As a lender, you can lend against NFTs with minimal risk of impermanent loss because, if the borrower defaults, you will receive the NFT at a discount.">
+    <meta name="title" content="Magnify.Cash">
+    <meta name="description" content="Decentralized credit market">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://testnet.nfty.finance/">
-    <meta property="og:title" content="NFTY Finance - TestNet">
-    <meta property="og:description" content="NFTY Finance is a decentralized protocol for NFT lending. NFTY Finance enables you to borrow against your NFTs without having to sell them. As a lender, you can lend against NFTs with minimal risk of impermanent loss because, if the borrower defaults, you will receive the NFT at a discount.">
+    <meta property="og:url" content="http://early.magnify.cash/">
+    <meta property="og:title" content="Magnify.Cash">
+    <meta property="og:description" content="Decentralized credit market">
     <meta property="og:image" content="">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="http://testnet.nfty.finance/">
-    <meta property="twitter:title" content="NFTY Finance - TestNet">
-    <meta property="twitter:description" content="NFTY Finance is a decentralized protocol for NFT lending. NFTY Finance enables you to borrow against your NFTs without having to sell them. As a lender, you can lend against NFTs with minimal risk of impermanent loss because, if the borrower defaults, you will receive the NFT at a discount.">
+    <meta property="twitter:url" content="http://early.magnify.cash/">
+    <meta property="twitter:title" content="Magnify.Cash">
+    <meta property="twitter:description" content="Decentralized credit market">
     <meta property="twitter:image" content="">
 
-    <!-- Google tag (gtag.js) (testnet.nfty.finance) -->
+    <!-- Google tag (gtag.js) (early.magnify.cash) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJQS54HL3V"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
