--- a/dapp-v1/index.html
+++ b/dapp-v1/index.html
@@ -9,7 +9,7 @@
     <!-- Meta Tags -->
     <!-- Primary Meta Tags -->
     <title>Magnify.Cash</title>
-    <link rel="icon" href="/theme/icon.svg">
+    <link rel="icon" href="/theme/magnify-cash-logo.jpeg">
     <meta name="title" content="Magnify.Cash">
     <meta name="description" content="Decentralized credit market">
 
