--- a/dapp-v1/index.html
+++ b/dapp-v1/index.html
@@ -18,14 +18,14 @@
     <meta property="og:url" content="http://early.magnify.cash/">
     <meta property="og:title" content="Magnify.Cash">
     <meta property="og:description" content="Decentralized credit market">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://magnify.cash/Artboard 6 copy@2x.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="http://early.magnify.cash/">
     <meta property="twitter:title" content="Magnify.Cash">
     <meta property="twitter:description" content="Decentralized credit market">
-    <meta property="twitter:image" content="">
+    <meta property="twitter:image" content="https://magnify.cash/Artboard 6 copy@2x.png">
 
     <!-- Google tag (gtag.js) (early.magnify.cash) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJQS54HL3V"></script>
