--- a/dapp-v1/index.html
+++ b/dapp-v1/index.html
@@ -27,16 +27,6 @@
     <meta property="twitter:description" content="Decentralized credit market">
     <meta property="twitter:image" content="https://magnify.cash/Artboard 6 copy@2x.png">
 
-    <!-- Google tag (gtag.js) (early.magnify.cash) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJQS54HL3V"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-ZJQS54HL3V');
-    </script>
-
     <!-- THEME -->
     <link href="/theme/halfmoon.css" rel="stylesheet" />
     <link href="/theme/nftyfi-theme.css" rel="stylesheet" />
@@ -90,8 +80,21 @@
     <!-- Polyfill -->
     <script type="module" src="./polyfills.ts"></script>
 
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PHPGZGBM');</script>
+    <!-- End Google Tag Manager -->
+
   </head>
   <body class="ps-lg-sbwidth">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PHPGZGBM"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <!-- App Root -->
     <div id="root"></div>
 
